Add folders structure and change HTML to React

--- a/project-promo-m-module-2 team-5-v0/src/html/partials/footer.html
+++ b/project-promo-m-module-2 team-5-v0/src/html/partials/footer.html
@@ -1,7 +1,7 @@
-<footer class="footer">
-  <small class="footer__copy">Awesome profile-cards @2021</small>
+<footer className="footer">
+  <small className="footer__copy">Awesome profile-cards @2021</small>
   <img
-    class="footer__logo"
+    className="footer__logo"
     src="./assets/images/logo-adalab.png"
     alt="Logo Adalab"
     title="Adalab"
