--- a/project-promo-m-module-2 team-5-v0/src/html/partials/header-design-card.html
+++ b/project-promo-m-module-2 team-5-v0/src/html/partials/header-design-card.html
@@ -1,7 +1,7 @@
-<header class="header-design-card">
+<header className="header-design-card">
   <img
     src="./assets/images/logo-u.png"
-    class="header-design-card__img"
+    className="header-design-card__img"
     title="Awesome Profile Cards"
     alt="Awesome Profile
     Cards Logo"
