--- a/project-promo-m-module-2 team-5-v0/src/html/partials/main-design-card-partials/design-content.html
+++ b/project-promo-m-module-2 team-5-v0/src/html/partials/main-design-card-partials/design-content.html
@@ -1,4 +1,4 @@
-<section class="js-collapsable-container">
+<section className="js-collapsable-container">
   <include
     src="title-fieldset.html"
     iconL="far fa-object-ungroup"
@@ -6,8 +6,8 @@
     iconR="fas fa-angle-up"
   ></include>
 
-  <div class="colorselection hidden__container">
-    <legend class="radioTitle">Colores</legend>
+  <div className="colorselection hidden__container">
+    <legend className="radioTitle">Colores</legend>
     <include src="coloroption.html" number="1" val="1"></include>
     <include src="coloroption.html" number="2" val="2"></include>
     <include src="coloroption.html" number="3" val="3"></include>
@@ -15,5 +15,5 @@
     <include src="coloroption.html" number="5" val="5"></include>
   </div>
 
-  <div class="form__border"></div>
+  <div className="form__border"></div>
 </section>
