--- a/project-team-7/src/stylesheets/layout/_preview.scss
+++ b/project-team-7/src/stylesheets/layout/_preview.scss
@@ -89,7 +89,7 @@
 }
 
 .pic_background {
-  background-image: url("../images/preview2.png");
+  background-image: url("../../images/preview2.png");
 }
 
 .card__contact {
