--- a/project-promo-m-module-2 team-5-v0/src/html/partials/header.html
+++ b/project-promo-m-module-2 team-5-v0/src/html/partials/header.html
@@ -1,7 +1,7 @@
-<header class="header">
+<header className="header">
   <img
     src="./assets/images/logo-u.png"
-    class="header__img"
+    className="header__img"
     title="Awesome Profile Cards"
     alt="Awesome Profile
   Cards Logo"
