--- a/project-promo-m-module-2 team-5-v0/src/html/partials/main-design-card-partials/coloroption.html
+++ b/project-promo-m-module-2 team-5-v0/src/html/partials/main-design-card-partials/coloroption.html
@@ -1,13 +1,13 @@
-<div class="design__content">
+<div className="design__content">
   <!--<label for="pallete"></label>-->
   <input
-    class="coloroption js-palette"
+    className="coloroption js-palette"
     type="radio"
     name="coloroption"
     id="pallete"
     value="@@val"
   />
-  <div class="pallete@@number a"></div>
-  <div class="pallete@@number b"></div>
-  <div class="pallete@@number c"></div>
+  <div className="pallete@@number a"></div>
+  <div className="pallete@@number b"></div>
+  <div className="pallete@@number c"></div>
 </div>
