--- a/project-promo-m-module-2 team-5-v0/src/html/partials/main-design-card-partials/fill-content.html
+++ b/project-promo-m-module-2 team-5-v0/src/html/partials/main-design-card-partials/fill-content.html
@@ -1,4 +1,4 @@
-<section class="fill js-collapsable-container collapsable--close">
+<section className="fill js-collapsable-container collapsable--close">
   <include
     src="title-fieldset.html"
     iconL="far fa-keyboard"
@@ -6,28 +6,28 @@
     iconR="fas fa-angle-up"
   ></include>
 
-  <div class="form__fill__content hidden__container">
-    <label for="fullname" class="form__fill__label">Nombre completo </label>
+  <div className="form__fill__content hidden__container">
+    <label for="fullname" className="form__fill__label">Nombre completo </label>
     <input
       type="text"
       name="name"
       id="fullname"
-      class="form__fill__input js-name"
+      className="form__fill__input js-name"
       placeholder="Ej: Sally Jill"
     />
 
-    <label for="job" class="form__fill__label">Puesto </label>
+    <label for="job" className="form__fill__label">Puesto </label>
     <input
       type="text"
       name="job"
       id="job"
-      class="form__fill__input js-job"
+      className="form__fill__input js-job"
       placeholder="Ej:Front-end unicorn"
     />
 
-    <label class="form__fill__label">Imagen de perfil </label>
-    <div class="form__fill__photo">
-      <button class="form__fill__photo--bt js__profile-trigger">
+    <label className="form__fill__label">Imagen de perfil </label>
+    <div className="form__fill__photo">
+      <button className="form__fill__photo--bt js__profile-trigger">
         Añadir imagen
       </button>
       <input
@@ -35,47 +35,47 @@
         name="photo"
         id="photo"
         value="Añadir imagen"
-        class="js__profile-upload-btn hidden js-input-text js-photo"
+        className="js__profile-upload-btn hidden js-input-text js-photo"
       />
 
-      <div class="form__fill__photo--preview js__profile-image"></div>
+      <div className="form__fill__photo--preview js__profile-image"></div>
     </div>
 
-    <label for="email" class="form__fill__label ">Email </label>
+    <label for="email" className="form__fill__label ">Email </label>
     <input
       type="email"
       name="email"
       id="email"
-      class="form__fill__input js-email"
+      className="form__fill__input js-email"
       placeholder="Ej:sally-hill@gmail.com"
     />
 
-    <label for="phone" class="form__fill__label">Teléfono </label>
+    <label for="phone" className="form__fill__label">Teléfono </label>
     <input
       type="tel"
       name="phone"
       id="phone"
-      class="form__fill__input js-phone"
+      className="form__fill__input js-phone"
       placeholder="Ej:555-55-55"
     />
 
-    <label for="linkedin" class="form__fill__label">Linkedin </label>
+    <label for="linkedin" className="form__fill__label">Linkedin </label>
     <input
       type="text"
       name="linkedin"
       id="linkedin"
-      class="form__fill__input js-linkedin"
+      className="form__fill__input js-linkedin"
       placeholder="Ej: sally-jill"
     />
 
-    <label for="github" class="form__fill__label">Github </label>
+    <label for="github" className="form__fill__label">Github </label>
     <input
       type="text"
       name="github"
       id="github"
-      class="form__fill__input js-github"
+      className="form__fill__input js-github"
       placeholder="Ej: @Sally-Jill"
     />
   </div>
 </section>
-<div class="form__border"></div>
+<div className="form__border"></div>
