--- a/project-promo-m-module-2 team-5-v0/src/html/partials/main-design-card-partials/preview.html
+++ b/project-promo-m-module-2 team-5-v0/src/html/partials/main-design-card-partials/preview.html
@@ -1,78 +1,78 @@
-<section class="main__preview">
-  <button class="preview__resetbutton js-reset-btn">
-    <i class="far fa-trash-alt"></i> reset
+<section className="main__preview">
+  <button className="preview__resetbutton js-reset-btn">
+    <i className="far fa-trash-alt"></i> reset
   </button>
-  <div class="preview__card">
-    <div class="card__line card__line--color">
-      <h2 class="card__name card__name--color js-preview-name">
+  <div className="preview__card">
+    <div className="card__line card__line--color">
+      <h2 className="card__name card__name--color js-preview-name">
         nombre apellido
       </h2>
-      <h3 class="card__job js-preview-job">Front-end developer</h3>
+      <h3 className="card__job js-preview-job">Front-end developer</h3>
     </div>
-    <!-- <div class="card__container__pic">-->
-    <div class="card__pic js__profile-preview pic_background"></div>
+    <!-- <div className="card__container__pic">-->
+    <div className="card__pic js__profile-preview pic_background"></div>
 
     <!-- <img
-      class="card__pic js__profile-preview"
+      className="card__pic js__profile-preview"
       src="./assets/images/preview.jpg"
     />-->
-    <ul class="card__contact">
-      <li class="contact__icon contact__icon--color">
+    <ul className="card__contact">
+      <li className="contact__icon contact__icon--color">
         <a
-          class="icon icon--color js-preview-phone"
+          className="icon icon--color js-preview-phone"
           href="phone"
           target="_blank"
         >
-          <i class="contact__icon__pic fas fa-mobile-alt"></i
+          <i className="contact__icon__pic fas fa-mobile-alt"></i
         ></a>
       </li>
-      <li class="contact__icon contact__icon--color">
+      <li className="contact__icon contact__icon--color">
         <a
-          class="icon icon--color js-preview-mail"
+          className="icon icon--color js-preview-mail"
           href="mailto:"
           target="_blank"
         >
-          <i class="contact__icon__pic far fa-envelope"></i
+          <i className="contact__icon__pic far fa-envelope"></i
         ></a>
       </li>
-      <li class="contact__icon contact__icon--color">
+      <li className="contact__icon contact__icon--color">
         <a
-          class="icon icon--color js-preview-linkedin"
+          className="icon icon--color js-preview-linkedin"
           href="https://linkedin.com"
           title="Linkedin contact"
           target="_blank"
         >
-          <i class="contact__icon__pic fab fa-linkedin-in"></i>
+          <i className="contact__icon__pic fab fa-linkedin-in"></i>
         </a>
       </li>
-      <li class="contact__icon contact__icon--color">
-        <a class="icon icon--color js-preview-github" href="" target="_blank">
-          <i class="contact__icon__pic fab fa-github-alt"></i
+      <li className="contact__icon contact__icon--color">
+        <a className="icon icon--color js-preview-github" href="" target="_blank">
+          <i className="contact__icon__pic fab fa-github-alt"></i
         ></a>
       </li>
     </ul>
   </div>
-  <div class="box-tooltip phone">
-    <span class="tooltip phone js-tooltip">
-      <a class="contact__icon__pic fas fa-mobile-alt" href="@@phone"></a>
+  <div className="box-tooltip phone">
+    <span className="tooltip phone js-tooltip">
+      <a className="contact__icon__pic fas fa-mobile-alt" href="@@phone"></a>
       ¿Hablamos?</span
     >
   </div>
-  <!-- <div class="box-tooltip mail">
-    <span class="tooltip mail js-tooltip">
-      <a class="contact__icon__pic far fa-envelope"></a>Contáctame, no tardaré
+  <!-- <div className="box-tooltip mail">
+    <span className="tooltip mail js-tooltip">
+      <a className="contact__icon__pic far fa-envelope"></a>Contáctame, no tardaré
       en contestarte.</span
     >
   </div>
-  <div class="box-tooltip linkedin">
-    <span class="tooltip linkedin js-tooltip">
-      <a class="contact__icon__pic fab fa-linkedin-in"></a>Descubre mi
+  <div className="box-tooltip linkedin">
+    <span className="tooltip linkedin js-tooltip">
+      <a className="contact__icon__pic fab fa-linkedin-in"></a>Descubre mi
       trayectoria profesional</span
     >
   </div>
-  <div class="box-tooltip github">
-    <span class="tooltip github js-tooltip">
-      <a class="contact__icon__pic fab fa-github-alt"></a><br />Echa un vistazo
+  <div className="box-tooltip github">
+    <span className="tooltip github js-tooltip">
+      <a className="contact__icon__pic fab fa-github-alt"></a><br />Echa un vistazo
       a mis proyectos</span
     >
   </div>-->
