--- a/project-promo-m-module-2 team-5-v0/src/html/partials/main-design-card-partials/title-fieldset.html
+++ b/project-promo-m-module-2 team-5-v0/src/html/partials/main-design-card-partials/title-fieldset.html
@@ -1,4 +1,4 @@
-<div class="form__title js-collapsable-header collapsable--close">
-  <h2 class="form__text js-collapsable-header"><i class="@@iconL form__iconL"></i>@@title</h2>
-  <i class="@@iconR form__iconR"></i>
+<div className="form__title js-collapsable-header collapsable--close">
+  <h2 className="form__text js-collapsable-header"><i className="@@iconL form__iconL"></i>@@title</h2>
+  <i className="@@iconR form__iconR"></i>
 </div>
