--- a/project-promo-m-module-2 team-5-v0/src/html/partials/main-index.html
+++ b/project-promo-m-module-2 team-5-v0/src/html/partials/main-index.html
@@ -1,23 +1,23 @@
-<main class="main-index">
-  <h1 class="main-index__title">Crea tu tarjeta de visita</h1>
-  <p class="main-index__subtitle">
+<main className="main-index">
+  <h1 className="main-index__title">Crea tu tarjeta de visita</h1>
+  <p className="main-index__subtitle">
     Crea mejores contactos profesionales de forma fácil y cómoda
   </p>
-  <ul class="main-index__options">
-    <li class="options__item">
-      <i class="item__pic far fa-object-ungroup"></i>
-      <label class="item__title">Diseña</h2>
+  <ul className="main-index__options">
+    <li className="options__item">
+      <i className="item__pic far fa-object-ungroup"></i>
+      <label className="item__title">Diseña</h2>
     </li>
-    <li class="options__item">
-      <i class="item__pic far fa-keyboard"></i>
-      <label class="item__title">Rellena</h2>
+    <li className="options__item">
+      <i className="item__pic far fa-keyboard"></i>
+      <label className="item__title">Rellena</h2>
     </li>
-    <li class="options__item">
-      <i class="item__pic fas fa-share-alt"></i>
-      <label class="item__title">Comparte</h2>
+    <li className="options__item">
+      <i className="item__pic fas fa-share-alt"></i>
+      <label className="item__title">Comparte</h2>
     </li>
   </ul>
-  <nav class="main-index__nav">
-    <a class="nav__startlink" href="./design-card.html" title="">Comenzar</a>
+  <nav className="main-index__nav">
+    <a className="nav__startlink" href="./design-card.html" title="">Comenzar</a>
   </nav>
 </main>
