--- a/project-team-7/src/stylesheets/layout/_share.scss
+++ b/project-team-7/src/stylesheets/layout/_share.scss
@@ -86,9 +86,11 @@
 .shared__icon {
   margin-right: 6px;
 }
+/*
 .hidden {
   display: none;
 }
+*/
 .message {
   font-size: 16px;
   color: $color-icon;
