--- a/src/stylesheets/core/_reset.scss
+++ b/src/stylesheets/core/_reset.scss
@@ -1,29 +1,9 @@
-body {
+* {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul {
-  margin: 0;
-  padding: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-ul {
   list-style: none;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
 }
