--- a/src/stylesheets/layout/_design.scss
+++ b/src/stylesheets/layout/_design.scss
@@ -20,6 +20,7 @@
   width: 17px;
   height: 17px;
   margin-right: 10px;
+  cursor: pointer;
 }
 
 .design__content {
@@ -31,9 +32,7 @@
 }
 .pallete1,
 .pallete2,
-.pallete3,
-.pallete4,
-.pallete5 {
+.pallete3 {
   width: 30px;
   height: 25px;
 }
@@ -68,27 +67,5 @@
   }
   &.c {
     background-color: $color-3c;
-  }
-}
-.pallete4 {
-  &.a {
-    background-color: $color-4a;
-  }
-  &.b {
-    background-color: $color-4b;
-  }
-  &.c {
-    background-color: $color-4c;
-  }
-}
-.pallete5 {
-  &.a {
-    background-color: $color-5a;
-  }
-  &.b {
-    background-color: $color-5b;
-  }
-  &.c {
-    background-color: $color-5c;
   }
 }
