--- a/src/stylesheets/layout/_fill.scss
+++ b/src/stylesheets/layout/_fill.scss
@@ -41,6 +41,9 @@
   border-radius: 3px;
   background-color: $color-icon;
   color: white;
+  text-align: center;
+  padding: 5px;
+  cursor: pointer;
 }
 .form__fill__photo--preview {
   width: 30px;
