--- a/src/stylesheets/layout/_main-index.scss
+++ b/src/stylesheets/layout/_main-index.scss
@@ -1,56 +1,70 @@
 .main-index {
-  width: 100%;
+  height: 88vh;
 
   background-color: $color-index-background;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   text-align: center;
   font-family: $font-main;
-  font-size: 12.8px;
-
+  font-size: 13px;
   @media all and(min-width: 768px) {
     font-size: 16px;
+    height: 93vh;
+    justify-content: flex-end;
+  }
+
+  .header__img {
+    width: 250px;
+    margin-top: 95px;
+
+    @media all and(min-width: 768px) {
+      width: 419px;
+      margin-top: 290px;
+    }
   }
 
   &__title {
-    margin: 35.4px 49.3px 0px 47.7px;
+    margin: 35px 50px 0px 50px;
     font-family: $font-main;
     color: $color-orange;
-    font-size: 19.2px;
+    font-size: 19px;
 
     @media all and(min-width: 768px) {
-      margin: 31px 245px 0px;
+      margin: 30px 245px 0px 245px;
       font-size: 24px;
     }
   }
 
   &__subtitle {
     color: $color-secondarytext;
-    margin: 0px 28px 0px 27.2px;
+    margin: 0px 28px;
+    max-width: 265px;
+    font-size: 13px;
 
     @media all and(min-width: 768px) {
-      margin: 0px 218px 0px 219px;
+      margin: 0px 218px;
+      max-width: 330px;
+      font-size: 16px;
     }
   }
 
   &__options {
-    margin: 17.8px 26.4px 0px 25.6px;
+    margin: 18px 26px 0px 26px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 268px;
     height: 74px;
-    border: 1.6px solid rgba(225, 115, 52, 0.21);
+    border: 2px solid rgba(225, 115, 52, 0.21);
     border-radius: 4px;
+    padding: 15px;
 
     @media all and(min-width: 768px) {
       width: 325px;
       height: 86px;
-      margin-top: 27px;
-      margin-right: 221px;
-      margin-left: 222px;
-      border-width: 2px;
+      margin: 27px 220px 0px 220px;
     }
 
     .options__item {
@@ -60,7 +74,7 @@
 
       .item__pic {
         color: $color-icon;
-        font-size: 22.4px;
+        font-size: 23px;
 
         @media all and(min-width: 768px) {
           font-size: 28px;
@@ -69,7 +83,7 @@
 
       .item__title {
         color: $color-text;
-        font-size: 12.8px;
+        font-size: 13px;
         text-align: left;
       }
     }
@@ -81,20 +95,19 @@
     justify-content: center;
     align-items: center;
     padding: 10px 20px;
-    margin: 38.6px 101px 30px 90px;
+    margin: 40px 100px 30px 90px;
     background-color: $color-button;
     border-radius: 21px;
-    font-weight: SemiBold;
     font-size: 16px;
     text-transform: uppercase;
+    cursor: pointer;
 
     @media all and(min-width: 768px) {
-      margin: 186px 319px 59px 320px;
+      margin: 190px 320px 60px 320px;
     }
 
     .nav__startlink {
       color: $color-grey3;
-      width: 100%;
     }
   }
 }
