--- a/src/stylesheets/layout/_preview.scss
+++ b/src/stylesheets/layout/_preview.scss
@@ -1,5 +1,4 @@
 .main__preview {
-  width: 100%;
   height: 475px;
   display: flex;
   background: linear-gradient(#bfcdd0, #dde9ed);
@@ -7,14 +6,11 @@
   align-items: center;
   @media all and (min-width: 768px) {
     border-radius: 6px;
-    width: 43%;
-    min-width: 329px;
-    height: 812px;
-    margin-top: 23px;
-    margin-right: 40px;
+    min-width: 330px;
+    min-height: 710px;
+    margin: 23px 40px 23px 0px;
   }
   @media all and (min-width: 1024px) {
-    width: 57%;
     min-width: 585px;
   }
 }
@@ -31,6 +27,7 @@
   border-radius: 15px;
   margin-top: 38px;
   transform: translate(-80px);
+  cursor: pointer;
   @media all and (min-width: 768px) {
     margin-top: 173px;
   }
