--- a/src/stylesheets/layout/_share.scss
+++ b/src/stylesheets/layout/_share.scss
@@ -15,6 +15,7 @@
   color: #ffffff;
   text-transform: uppercase;
   margin: 25px auto;
+  cursor: pointer;
   font-size: 18px;
   font-family: $font-main;
   border-color: $color-icon;
