--- a/web/src/stylesheets/core/_variables.scss
+++ b/web/src/stylesheets/core/_variables.scss
@@ -23,6 +23,7 @@ $color-turquoise: #438792;
 $color-button: $color-turquoise;
 $color-lightgreen: #a2deaf;
 $color-border: $color-lightgreen;
+
 $color-1a: #114e4e;
 $color-1b: #438792;
 $color-1c: #a2deaf;
@@ -32,3 +33,9 @@ $color-2c: #e95626;
 $color-3a: #bd690a;
 $color-3b: #8a8827;
 $color-3c: #815e41;
+$color-4a: #0e442b;
+$color-4b: #4fd6cf;
+$color-4c: #06a060;
+$color-5a: #a87a86;
+$color-5b: #500b31;
+$color-5c: #910a6f;
