--- a/web/src/stylesheets/layout/_tooltip.scss
+++ b/web/src/stylesheets/layout/_tooltip.scss
@@ -8,6 +8,7 @@
   &.phone {
     margin-left: -165px;
     margin-top: -50px;
+    display: none;
   }
   &.mail {
     margin-left: -70px;
@@ -31,7 +32,7 @@
   border-right: 6px solid transparent;
   border-top: 6px solid #777777;
   bottom: -6px;
-  content: "";
+  content: '';
   height: 0;
   left: -7%;
   margin-left: 10px;
