change style card and error message

--- a/views/card.ejs
+++ b/views/card.ejs
@@ -23,7 +23,7 @@
     <title>Card preview</title>
   </head>
   <body>
-    <section class="main__preview">
+    <section class="main__preview card_link">
       <div class="preview__card palette-preview<%= palette %>">
         <div class="card__line card__line--color">
           <h2 class="card__name card__name--color js-preview-name">
