--- a/web/src/stylesheets/layout/_share.scss
+++ b/web/src/stylesheets/layout/_share.scss
@@ -55,7 +55,7 @@
   margin-top: 20px;
 }
 .shared__link {
-  font-size: 18px;
+  font-size: 14px;
   color: $color-icon;
   font-weight: 500;
   margin: 30px auto;
@@ -100,4 +100,11 @@
   font-family: $font-main;
   padding-top: 20px;
   padding-bottom: 20px;
+}
+.message-error {
+  font-size: 12px;
+  color: black;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
