--- a/views/card.ejs
+++ b/views/card.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="shortcut icon" type="image/png" href="../public/favicon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
@@ -16,7 +17,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="/static/css/main.8ce55e0a.chunk.css"
+      href="/static/css/main.df91474d.chunk.css"
       rel="stylesheet"
       type="text/css"
     />
