--- a/web/src/stylesheets/layout/_preview.scss
+++ b/web/src/stylesheets/layout/_preview.scss
@@ -174,6 +174,9 @@
 }
 
 .card_link {
-  height: 100vh;
+  height: 100%;
   justify-content: center;
+  border-radius: 0px;
+  margin: 0px;
+  padding: 0px;
 }
